[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2, <4"]

[project]
name = "conan-config-tools"
version = "0.2.1"
description = "A tool to facilitate configuration of conan across operating systems"
authors = [{ name = "Samuel Dowling", email = "samuel.dowling@protonmail.com" }]
readme = "README.md"
dependencies = [
    "click",
    "pyyaml",
    "conan>=2.0.14",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
    "pytest",
    "mypy",
    "mock",
    "pytest-mock",
    "isort",
]

[project.scripts]
cct = "conan_config_tools.cli:cli"

[project.urls]
repository = "https://gitlab.samueldowling.com/samuel-emrys/conan-config-tools.git"
issues = "https://gitlab.samueldowling.com/samuel-emrys/conan-config-tools/-/issues"

